--- a/src/Makefile
+++ b/src/Makefile
@@ -7,11 +7,12 @@ CFLAGS  ?= -std=c17 -g\
 
 .PHONY: all clean
 
-all: assemble emulate
+all: parse.c
 
-assemble: assemble.o
-emulate: emulate.o
+#assemble: assemble.o
+#emulate: emulate.o
+parse: parse.o
 
 clean:
-	$(RM) *.o assemble emulate
+	$(RM) *.o parse #assemble emulate
 	
