Cleaned up directory, not ready to test, readFile needs to be finished, more cleanup required

--- a/src/Makefile
+++ b/src/Makefile
@@ -10,7 +10,7 @@ CFLAGS  ?= -std=c17 -g\
 all: assemble emulate
 
 assemble: assemble.o
-emulate: src/emulate.o
+emulate: emulate.o
 
 clean:
 	$(RM) *.o assemble emulate
