--- a/src/Makefile
+++ b/src/Makefile
@@ -14,19 +14,21 @@ emulate: Emulate/emulate.o
 clean:
 	$(RM) *.o assemble emulate
 	
-emulate:       Emulate/emulate.o custombit.o dpi-immediate.o dpi-register.o parseLS.o parseBranches.o readnwrite.o
+emulate: Emulate/emulate.o Emulate/custombit.o Emulate/dpi-immediate.o Emulate/dpi-register.o Emulate/parseLS.o Emulate/parseBranches.o Emulate/readnwrite.o
 
-custombit.o: Emulate/custombit.h
+Emulate/custombit.o: Emulate/custombit.h
 
-readnwrite.o: Emulate/readnwrite.h emulate.h
+Emulate/readnwrite.o: Emulate/readnwrite.h Emulate/emulate.h
 
-parseBranches.o: Emulate/parseBranches.h emulate.h readnwrite.h custombit.h
+Emulate/parseBranches.o: Emulate/parseBranches.h Emulate/emulate.h Emulate/readnwrite.h Emulate/custombit.h
 
-parseLS.o: Emulate/parseLS.h emulate.h readnwrite.h custombit.h
+Emulate/parseLS.o: Emulate/parseLS.h Emulate/emulate.h Emulate/readnwrite.h Emulate/custombit.h
 
-dpi-register.o: Emulate/dpi-register.h emulate.h readnwrite.h custombit.h
+Emulate/dpi-register.o: Emulate/dpi-register.h Emulate/emulate.h Emulate/readnwrite.h Emulate/custombit.h
 
-dpi-immediate.o: Emulate/dpi-immediate.h emulate.h readnwrite.h custombit.h
+Emulate/dpi-immediate.o: Emulate/dpi-immediate.h Emulate/emulate.h Emulate/readnwrite.h Emulate/custombit.h
 
-emulate.o: Emulate/dpi-immediate.h dpi-register.h parseLS.h parseBranches.h emulate.h readnwrite.h custombit.h
+Emulate/emulate.o: Emulate/dpi-immediate.h Emulate/dpi-register.h Emulate/parseLS.h Emulate/parseBranches.h Emulate/emulate.h Emulate/readnwrite.h Emulate/custombit.h
+
+dynmap.o: Assemble/dynmap.h
 
