Moved custombit to BitUtils directory, changed makefiles accordingly

--- a/src/Assemble/Makefile
+++ b/src/Assemble/Makefile
@@ -7,10 +7,8 @@ all:	$(BUILD)
 clean:
 	/bin/rm -f *.o assemble
 
-assemble: assemble.o dynmap.o
+assemble: assemble.o dynmap.o ../BitUtils/custombit.o
 
 assemble.o: dynmap.h
 
 dynmap.o: dynmap.h
-
-
