Combined all parts and code compiles

--- a/src/Assemble/Makefile
+++ b/src/Assemble/Makefile
@@ -7,8 +7,15 @@ all:	$(BUILD)
 clean:
 	/bin/rm -f *.o assemble
 
-assemble: assemble.o dynmap.o ../BitUtils/custombit.o
+assemble: assemble.o dynmap.o ../BitUtils/custombit.o assembleBranches.o assembleDPI.o assembleSingleDTI.o
 
-assemble.o: dynmap.h
+assemble.o: dynmap.h assembleBranches.h assembleDPI.h assembleSingleDTI.h
+
+assembleBranches.o: assembleBranches.h
+
+assembleDPI.o: assembleDPI.h
+
+assembleSingleDTI.o: assembleSingleDTI.h dynmap.h
 
 dynmap.o: dynmap.h
+
